fixedd gap in grid

--- a/styles.scss
+++ b/styles.scss
@@ -169,6 +169,7 @@ main {
     
 
     .card{
+        margin-bottom: 0;
 
         &--daniel {
             grid-column: 1/3;
